--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -80,7 +80,7 @@
     padding: 20px 30px 15px;
     border-bottom: 1px solid #eee;
     display: flex;
-    justify-content: between;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -94,7 +94,6 @@
 .results-count {
     color: #666;
     font-size: 14px;
-    margin-left: auto;
 }
 
 .search-results-list {
@@ -165,16 +164,6 @@
     font-size: 12px;
     font-weight: 500;
     text-transform: uppercase;
-}
-
-.search-result-type[data-type="service"] {
-    background: #d1ecf1;
-    color: #0c5460;
-}
-
-.search-result-type[data-type="contact"] {
-    background: #d4edda;
-    color: #155724;
 }
 
 .search-result-arrow {
